k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: armanfit-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "30"
spec:
  tls:
    - hosts:
        - api.armanvarzesh.com
      secretName: "${SECRETNAME}"  # from env/secret manager
  rules:
    - host: api.armanvarzesh.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: armanfit-backend
                port:
                  number: 80
